Fix some spacing and finish slide updates

--- a/HailstoneTrace.css
+++ b/HailstoneTrace.css
@@ -19,7 +19,7 @@
 }
 
 #HailstoneTable #HailstoneBanner {
-    width: 1800px;
+    width: 1400px;
     height: 1.4em;
     vertical-align: middle;
     margin-bottom: 0px;
@@ -32,7 +32,7 @@
 }
 
 #HailstoneConsole {
-    width: 1800px;
+    width: 1400px;
     height: 130px;
     background-color: #1B1C18;
     margin: 0px;
